-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: openjdk8u232, 11.0.5, 11.0.5-oracle, 13.0.1, 14
-
Component/s: client-libs
-
b02
-
b25
-
x86_64
-
windows_10
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8233528 | 13u-cpu | Philip Race | P2 | Resolved | Fixed | master |
| JDK-8233611 | 13.0.2 | Philip Race | P2 | Closed | Fixed | b03 |
| JDK-8233523 | 11.0.7-oracle | Philip Race | P2 | Resolved | Fixed | b01 |
| JDK-8233618 | 11.0.6-oracle | Philip Race | P2 | Closed | Fixed | b03 |
| JDK-8234700 | 11.0.6 | Philip Race | P2 | Resolved | Fixed | b05 |
| JDK-8234069 | 11.0.5.0.3-oracle | Philip Race | P2 | Closed | Fixed | b01 |
| JDK-8251500 | openjdk8u272 | Philip Race | P2 | Resolved | Fixed | b03 |
Occurs on Windows and Linux. MacOS seems to be OK.
A DESCRIPTION OF THE PROBLEM :
With the Java update 11.0.5 the font metrics returns a string width of zero for large font size objects. A correct width is only reported for space characters. We use the large font in large graphics transformations. Reporting the font metric for fonts with a fontsize up to 1950 seems to be OK. Fontsizes above 2000 return the unexpected result of a zero width.
REGRESSION : Last worked in version 11
EXPECTED VERSUS ACTUAL BEHAVIOR :
EXPECTED -
13330.078125
3333.984375
ACTUAL -
0.0
3333.984375
---------- BEGIN SOURCE ----------
public static void main( String[] args ) {
Font font = new Font( "SansSerif", 0, 12000 );
System.out.println( font.getStringBounds( "str", new FontRenderContext( null, false, true ) ).getWidth() );
System.out.println( font.getStringBounds( " ", new FontRenderContext( null, false, true ) ).getWidth() );
}
---------- END SOURCE ----------
CUSTOMER SUBMITTED WORKAROUND :
Use Java 11.04 instead 11.05.
FREQUENCY : always
- backported by
-
JDK-8233523 Fontmetrics for large Fonts has zero width
-
- Resolved
-
-
JDK-8233528 Fontmetrics for large Fonts has zero width
-
- Resolved
-
-
JDK-8234700 Fontmetrics for large Fonts has zero width
-
- Resolved
-
-
JDK-8251500 Fontmetrics for large Fonts has zero width
-
- Resolved
-
-
JDK-8233611 Fontmetrics for large Fonts has zero width
-
- Closed
-
-
JDK-8233618 Fontmetrics for large Fonts has zero width
-
- Closed
-
-
JDK-8234069 Fontmetrics for large Fonts has zero width
-
- Closed
-
- relates to
-
JDK-8328896 Fontmetrics for large Fonts has zero width
-
- Resolved
-