8233097: Fontmetrics for large Fonts has zero width

Reviewed-by: jdv, serb